--- a/Exercise12.uvprojx
+++ b/Exercise12.uvprojx
@@ -400,6 +400,11 @@
               <FileType>1</FileType>
               <FilePath>.\move.c</FilePath>
             </File>
+            <File>
+              <FileName>debug.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\debug.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
