engine can play like a two year old now

--- a/Exercise12.uvprojx
+++ b/Exercise12.uvprojx
@@ -323,7 +323,7 @@
             <wLevel>2</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
-            <uC99>0</uC99>
+            <uC99>1</uC99>
             <useXO>0</useXO>
             <v6Lang>3</v6Lang>
             <v6LangP>3</v6LangP>
@@ -409,6 +409,11 @@
               <FileName>debug.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\debug.c</FilePath>
+            </File>
+            <File>
+              <FileName>engine.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\engine.c</FilePath>
             </File>
           </Files>
         </Group>
